--- a/CitelSoftwareApplication.Web/Properties/launchSettings.json
+++ b/CitelSoftwareApplication.Web/Properties/launchSettings.json
@@ -1,20 +1,18 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29232",
-      "sslPort": 4445
+      "applicationUrl": "http://localhost:58060",
+      "sslPort": 44377
     }
   },
   "profiles": {
-    "CitelSoftwareApplication.ProdutoAPI": {
+    "CitelSoftwareApplication.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:4445;http://localhost:4446",
+      "applicationUrl": "https://localhost:7032;http://localhost:5271",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +20,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
